--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+.container {
+  margin-top: 50px;
+}
+
+footer .container {
+  margin-top: 0px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  padding-top: 10px;
+  width: 100%;
+  height: 60;
+  border-top: 2px solid #f5f5f5;
+  background-size: cover;
   text-align: center;
+  background-color: #333;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#nav {
+  margin-bottom: 0 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#header {
+  background-image: url(images/pexels-jonathan-meyer-752473.jpg);
+  /* border-bottom: 1px solid green; */
+  height: 260px;
+  width: 100%;
+  background-size: cover;
+  /* background-repeat: no-repeat; */
 }
